add increase time count api
