# api/docs/swagger.json
@@ -100,6 +100,45 @@
                 }
             }
         },
+        "/timecount/increase": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Time count"
+                ],
+                "summary": "Increase time count",
+                "parameters": [
+                    {
+                        "description": "body request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.IncreaseTimeCountDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "invalid body fields.",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "security": [
@@ -119,12 +158,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.User"
-                        },
-                        "headers": {
-                            "Token": {
-                                "type": "string",
-                                "description": "Bearer"
-                            }
                         }
                     }
                 }
@@ -132,6 +165,17 @@
         }
     },
     "definitions": {
+        "handlers.IncreaseTimeCountDTO": {
+            "type": "object",
+            "required": [
+                "count"
+            ],
+            "properties": {
+                "count": {
+                    "type": "integer"
+                }
+            }
+        },
         "handlers.UserCreateDTO": {
             "type": "object",
             "required": [
@@ -209,6 +253,9 @@
                 },
                 "password": {
                     "type": "string"
+                },
+                "timeCount": {
+                    "type": "integer"
                 }
             }
         }
