# api/handlers/user.go
@@ -18,8 +18,8 @@ import (
 //	@Summary	get user data
 //	@Produce	json
 //	@Security	ApiKeyAuth
-//	@Success	200	{object}	models.User
 //	@Header		200	{string}	Token	"Bearer"
+//	@Success	200	{object}	models.User
 //	@Router		/user [get]
 func (h *Handler) GetUserData(c echo.Context) error {
 	token, _ := c.Get(constants.TokenData).(*jwt.Token)
