# api/main.go
@@ -89,6 +89,7 @@ func main() {
 	e.GET("/users", h.GetUserList)
 	e.DELETE("/users", h.RemoveUsers)
 	e.GET("/user", h.GetUserData, middlewares.AuthMiddleware())
+	e.PATCH("/timecount/increase", h.TimeCountIncrease, middlewares.AuthMiddleware())
 	e.GET("/", func(c echo.Context) error {
 		return c.String(http.StatusOK, "Welcome to Fudol API")
 	})
